@@ -1020,4 +1020,5 @@ started these clone on 12th of July, 2019
 [uuk]: fixed bug: player entity is removed from world when it dies and not added back
 [uuk]: rolled back dev-branch as its code was strongly broken [world gen time ~100x higher than before]
 [uuk]: when switching to an state, it will now get an on_resize-event-call as size may have updated
+[uuk]: refactored ModLoader & optimized mod-loading by updating pgb's only when task execution for tick finished
 
